# tinyLab

./: .gitignore  .pre-commit-config.yaml  BUILD_SUMMARY.md  CITATION.cff  CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  RELEASE_NOTES.md  Results.md  V1_1_ACCEPTANCE_CHECKLIST.md  V1_1_IMPLEMENTATION_SUMMARY.md  h1_multitoken_results.py  pyproject.toml  smoke_test.py  smoke_test_cuda.py
.claude/: settings.local.json
devlog/: CHANGELOG_v1.1.md
docs/: CUDA_SETUP.md  REPLICATION.md  RESULTS_MANIFEST.md  STRUCTURE.md  blog_post.md  roadmap_next_steps.md  suppressor_analysis_runbook.md  suppressor_handover.md
figs/: binder_binder_sweep_corpus_gpt2medium_top10.md  binder_binder_sweep_corpus_gpt2small_top10.md  binder_binder_sweep_gpt2medium_expanded_top10.md  binder_binder_sweep_gpt2medium_top10.md  binder_binder_sweep_gpt2small_top10.md
paper/: COMPILATION_SUCCESS.md  FIGURE_SPECIFICATIONS.md  METHODS_PAPER_COMPLETE.md  METHODS_PAPER_OUTLINE.md  Makefile  PAPER_STATUS_FINAL.md  PROGRESS_SUMMARY.md  README.md  internal_review.md  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  references.bib  tinylab_methods.aux  tinylab_methods.bbl  tinylab_methods.blg  tinylab_methods.out  tinylab_methods.tex
reports/: README.md  RESULTS_MANIFEST.json  activation_entropy_gpt2large_facts_robust.json  activation_entropy_gpt2medium_cf_robust.json  activation_entropy_gpt2medium_facts_clean.json  activation_entropy_gpt2medium_facts_robust.json  activation_entropy_gpt2medium_logic_robust.json  activation_entropy_gpt2medium_neg_robust.json  (+153 more)
(+276 files in other folders)
